--- a/Dashboard.html
+++ b/Dashboard.html
@@ -215,7 +215,7 @@
                     form.nombres.value = user.nombres;
                     form.apellidos.value = user.apellidos;
                     form.correo.value = user.correo;
-                    form.contraseña.value = '';
+                    form.contraseña.value = user.contraseña;
                     form.celular.value = user.celular;
 
                     modal.style.display = 'block';
@@ -253,7 +253,7 @@
         };
     </script>
 
-
+<!-- Modal para actualizar Usuarios -->
     <div id="updateModal" class="modal" style="display: none;">
         <div class="modal-content">
 
