--- a/Dashboard.html
+++ b/Dashboard.html
@@ -256,7 +256,6 @@
 <!-- Modal para actualizar Usuarios -->
     <div id="updateModal" class="modal" style="display: none;">
         <div class="modal-content">
-
             <h3>Actualizar Usuario</h3>
             <form id="userUpdateForm">
                 <label for="usuario_id">Id Usuario:</label>
@@ -286,8 +285,8 @@
                 <label for="celular">Celular:</label>
                 <input type="text" id="celular"><br>
 
-                <button type="submit">Guardar Cambios</button>
-                <button type="button" onclick="closeUpdateModal()">Cancelar</button>
+                <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                <button type="button" class="btn btn-danger">Cancelar</button>
             </form>
         </div>
     </div>
