--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
           <h1 class="h3 mb-3 fw-normal">Iniciar Sesión</h1>
       
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="correo" placeholder="name@example.com">
+            <input type="text" class="form-control" id="correo" placeholder="name@example">
             <label for="correo">Correo electrónico</label>
           </div>
           <div class="form-floating mb-3">
