--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
             <input type="password" class="form-control" id="contraseña" placeholder="Password">
             <label for="contraseña">Contraseña</label>
           </div>
-            <div id="error" style="color: red; text-align: center;"></div>
+          <div id="error" style="color: red; text-align: center;"></div>
           <div class="form-check text-start my-3">
             <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
@@ -107,7 +107,8 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         document.getElementById('btnEntrar').addEventListener('click', function(e){
-            e.preventDefault()
+            e.preventDefault();
+
             let correo = document.getElementById('correo').value;
             let contraseña = document.getElementById('contraseña').value;
 
