--- a/login.html
+++ b/login.html
@@ -125,8 +125,14 @@
                 }else{
                     alert('Error de autenticación, ' + response.data.message)
                 }
+            }).catch(function (error) {
+                if (error.response) {
+                    alert('Error de autenticación, ' + error.response.data.message);
+                } else {
+                    alert('Error de conexión o servidor no responde.');
+                }
             });
-        })
+        });
     </script>
 
 </body>
